# sci_practice_21-22

./: .gitignore  CMakeLists.txt  Canny_Hough.cpp  Gauss_threshold.cpp  README.md  sparse_optical_flow_test.cpp
.github/workflows/: try_make.yml
docs/: _canny___hough_8cpp.html  _canny___hough_8cpp.js  _canny___hough_8cpp__incl.map  _canny___hough_8h.html  _canny___hough_8h.js  _canny___hough_8h__dep__incl.map  _canny___hough_8h__dep__incl.md5  _canny___hough_8h__incl.map  _canny___hough_8h_source.html  _gauss__threshold_8cpp.html  _gauss__threshold_8cpp.js  _gauss__threshold_8cpp__incl.map  _gauss__threshold_8h.html  _gauss__threshold_8h.js  _gauss__threshold_8h__dep__incl.map  _gauss__threshold_8h__dep__incl.md5  _gauss__threshold_8h__incl.md5  _gauss__threshold_8h_source.html  annotated.html  class_main_window-members.html  class_main_window.html  class_main_window.js  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  class_ui___main_window.html  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_c.html  globals_defs.html  globals_defs_l.html  globals_defs_q.html  globals_defs_u.html  globals_f.html  globals_func.html  (+75 more)
docs/html/: _canny___hough_8cpp.html  _canny___hough_8cpp__incl.md5  _canny___hough_8h__incl.md5  _canny___hough_8h_source.html  _gauss__threshold_8cpp__incl.md5  _gauss__threshold_8h.html  _gauss__threshold_8h__incl.map  _gauss__threshold_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window.js  files.html  (+51 more)
src/: Canny_Hough.cpp  Canny_Hough.h  Gauss_threshold.cpp  Gauss_threshold.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optical_flow.cpp  sci_practice_21-22  sci_practice_21-22.pro  shake_compensation.cpp  shake_compensation.h  sparse_optical_flow_test.cpp  structures.h  window.cpp  window.h
(+50 files in other folders)
